# WireSock_GUI

./: config_manager.py  main.py  misc.py  models.py  pyproject.toml  resources.py  utils.py  wiresock_manager.py
dialogs/: already_running.py  list_edit.py  new_version.py  not_installed.py  settings.py  tunnel_active.py  tunnel_create.py  tunnel_error.py  va_mode_error.py
utils/: config_manager.py  logger.py  misc.py  notify.py
views/: TunnelsView.py  edit.py  list.py  logger.py  main.py  settings.py  statistics.py  tunnels.py
wiresock_manager/: wg_booster.py  wiresock_manager.py
