[tool.poetry]
name = "wiresock-gui"
version = "0.1.0"
description = "GUI for the WireSock console application"
authors = ["KllRaz <kllraz@yandex.ru>"]
readme = "README.md"
packages = [{include = "wiresock_gui"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
