[tool.poetry]
name = "wiresock_gui"
version = "0.1.0"
description = "GUI for the WireSock console application"
authors = ["KllRaz <kllraz@yandex.ru>"]
readme = "README.md"
packages = [{include = "wiresock_gui"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
flet = "^0.8.4"
pyinstaller = "^5.13.0"
winshell = "^0.6"
windows-toasts = "^0.4.1"
humanize = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
